--- a/app/src/main/res/drawable/bg_gradient.xml
+++ b/app/src/main/res/drawable/bg_gradient.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="@color/gradient_start"
-        android:centerColor="@color/gradient_center"
-        android:endColor="@color/gradient_end"
-        android:angle="135"/>
+        android:angle="45"
+        android:endColor="#000000"
+        android:startColor="#1C1C1C"
+        android:type="linear" />
 </shape>
