--- a/app/src/main/res/drawable/bg_main_gradient.xml
+++ b/app/src/main/res/drawable/bg_main_gradient.xml
@@ -2,11 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:type="radial"
-        android:gradientRadius="800dp"
-        android:centerX="50%"
-        android:centerY="30%"
-        android:startColor="#2C2C2C"
-        android:centerColor="#121212"
-        android:endColor="#000000" />
+        android:angle="45"
+        android:startColor="@color/gradient_start"
+        android:centerColor="@color/gradient_center"
+        android:endColor="@color/gradient_end"
+        android:type="linear" />
 </shape>
